# cybersentinel-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sentinel.db  sentinel.db-journal
config/: sentinel.yaml.example
cybersentinel/: __init__.py  __main__.py  cli.py
cybersentinel/agents/: __init__.py  base.py  config.py  dependency.py  log_parser.py  report.py  sast.py  threat_model.py
cybersentinel/agents/exploit/: __init__.py  briefing.py  executor.py
cybersentinel/agents/intelligence/: __init__.py  attack_chain.py  cve_enrich.py  multi_model.py  threat_actor.py
cybersentinel/agents/recon/: __init__.py  dns_intel.py  fingerprint.py  osint.py  portscan.py  subdomain.py  waf_detect.py
cybersentinel/agents/redteam/: __init__.py  evasion.py  injection.py  pivot.py  (+2 more)
cybersentinel/core/: __init__.py  config.py  orchestrator.py  reasoning.py  safety.py
cybersentinel/models/: __init__.py  action.py  finding.py  session.py
cybersentinel/reporting/: __init__.py  compliance.py  delta.py  html_dashboard.py  markdown_report.py  pdf_report.py
cybersentinel/storage/: __init__.py  annotations.py  database.py
cybersentinel/utils/: __init__.py  detection_rules.py  tool_runner.py
demo/: demo_session.py  docker-compose.yml
skill/: SKILL.md
skill/references/: cve-assessment.md  hardening.md  incident-response.md  log-analysis.md  mitre-attack.md  phishing-detection.md  security-reporting.md  threat-modeling.md
tests/: test_agents_extended.py  test_config.py  test_dependency.py  test_orchestrator.py  test_safety.py  test_sast.py
(+9 files in other folders)
